[project]
name = "lcmsampler-comfyui"
description = "This extension node is intended for the use of LCM conversion for SSD-1B-anime. It does not guarantee operation with the original LCM (as it cannot load weights in the current version). To take advantage of fast generation with LCM, a node for using TAESD as a decoder is also provided. This is inspired by ComfyUI-OtherVAEs."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/laksjdjf/LCMSampler-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "LCMSampler-ComfyUI"
Icon = ""
